<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Lista zakupów</string>
    <string name="menu_settings">Settings</string>
    <string name="welcome.shopping">Na zakupy</string>
    <string name="welcome.catalog">Katalog produktów</string>
    <string name="shopping.common.edit">Edytuj</string>
    <string name="shopping.common.delete">Usuń</string>
    <string name="shopping_lists.title">ShoppingListsActivity</string>
    <string name="shopping_lists.add">Dodaj listę zakupów</string>
    <string name="title_activity_shopping">Przygotuj listę</string>
    <string name="title_activity_flat_shopping">Zakupy</string>
	<string name="title_activity_catalog_edit">Edycja katalogu produktów</string>
	<string name="title_activity_category_edit">Informacje o kategorii</string>
	<string name="title_activity_product_edit">Informacje o produkcie</string>
	<string name="catalog.edit.addCategory">Dodaj kategorię</string>
	<string name="catalog.edit.addProduct">Dodaj produkt</string>
	<string name="catalog.edit.deleteCategory.confirmation.title">Usuwanie kategorii</string>
	<string name="catalog.edit.deleteCategory.confirmation.message">Czy na pewno chcesz usunąć kategorię %s i wszystkie przypisane do niej produkty z katalogu i ze wszystkich list zakupów?</string>
	<string name="catalog.edit.deleteCategory.confirmation.toast">Kategoria %s została usunięta</string>
	<string name="catalog.edit.deleteProduct.confirmation.title">Usuwanie produktu</string>
	<string name="catalog.edit.deleteProduct.confirmation.message">Czy na pewno chcesz usunąć produkt %s z katalogu i ze wszystkich list zakupów?</string>
	<string name="catalog.edit.deleteProduct.confirmation.toast">Produkt %s został usunięty</string>	
	<string name="category_edit_category_name">Nazwa</string>
	<string name="category_edit_category_name_hint">Wprowadź nazwę kategorii</string>
	<string name="product_edit_category_name">Nazwa kategorii</string>
	<string name="product_edit_product_name">Nazwa produktu</string>
	<string name="product_edit_product_name_hint">Wprowadź nazwę produktu</string>
	<string name="product_search_hint">Szukaj produktu</string>
	<string name="clear_filter">Wyczyść</string>
	<string name="menu_new_list">Nowa lista</string>
	<string name="menu_add_non_catalog_product">Dodaj dowolny produkt</string>
	<string name="menu_show_shopping_lists">Zapisane listy</string>
	<string name="menu_save_current_shopping_list">Zapisz listę</string>
	<string name="menu_save_current_shopping_list_as">Zapisz listę jako&#8230;</string>
	<string name="title_activity_shopping_lists">Wybierz listę zakupów</string>
	<string name="saved_shopping_list_merge">Dodaj do aktualnej listy</string>
	<string name="saved_shopping_list_load">Zastąp aktualną listę</string>
	<string name="saved_shopping_list_delete">Usuń</string>
	<string name="save_list_as_title">Zapisz listę jako</string>
	<string name="save_list_as_prompt">Wprowadź nazwę listy</string>
	<string name="add_non_catalog_product_title">Produkt spoza katalogu</string>
	<string name="add_non_catalog_product_prompt">Wprowadź nazwę produktu</string>
	<string name="finish_shopping">Zakończ zakupy</string>
</resources>