<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".FlatShoppingListActivity" >

    <LinearLayout
        android:id="@+id/flatShoppingListLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp" >

        <TextView
            android:id="@+id/textViewEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_shopping"
            android:textAppearance="?android:attr/textAppearanceMedium"  
            android:clickable="true"
            android:onClick="showTreeView" />
        
        <ImageView 
            android:src="@android:drawable/ic_media_play" 
            android:contentDescription="" 
            android:layout_width="wrap_content" 
            android:layout_height="fill_parent" />

        <TextView
            android:id="@+id/textViewGoShopping"
            style="@style/ActiveLink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_flat_shopping" />
        
    </LinearLayout>

    <ListView
        android:id="@+id/flatShoppingList"
        android:layout_width="fill_parent"
        android:layout_height="0dp" android:layout_weight="1" >
    </ListView>

    <Button
        android:id="@+id/finishShoppingBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="finishShopping"
        android:text="@string/finish_shopping" />
</LinearLayout>